# project-installer

./: Cargo.toml  README.md  config.toml  index.html  package-lock.json  package.json
src/: App.vue  Prpject.vue  common.js  common.ts  config.rs  main.js  main.rs  main.ts  repo.rs
src-tauri/: .gitignore  Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  common.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  process.rs  project.rs  repo.rs  runtime.rs
src-tauri/src/command/: configuration.rs  initialize.rs  message.rs  mod.rs  remote_repo.rs
src-tauri/src/message/: input.rs  output.rs
src-tauri/src/messages/: command_state.rs  error_state.rs  github_state.rs  global_state.rs  mod.rs  project_state.rs
src-tauri/src/values/: error.rs  status.rs
src/config/: command_info.ts  project_config.ts  proxy_config.ts  tool_config.ts
src/messages/: application_state.ts  application_state_output.ts  command_state.js  command_state.ts  command_state_output.ts  github.ts  github_config_input.ts  github_state.js  github_state.ts  github_state_output.ts  global_state.js  log.ts  notification.ts  project.ts  project_config_input.ts  project_state.js  project_state.ts  project_state_output.ts
src/value/: configuration.ts  status.ts
src/view/: GitHubCfgView.vue  HomeView.vue  MavenCfgView.vue  ProjectCfgView.vue
src/views/: GitHubCfgView.vue  GitHubDetailCfgView.vue  GlobalLogArea.vue  JavaCfgView.vue  LogArea.vue  MavenCfgView.vue  MessageArea.vue  NodeJsCfgView.vue  ProjectCfgView.vue  ProjectDetailCfgView.vue
