[package]
name = "project-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = { version = "0.20.3" }
anyhow = { version = "1.0.100", features = ["backtrace","std"] }
tokio = { version = "1.48.0", features = ["full"] }
config = { version = "0.15.19", features = ["toml"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }

