[package]
name = "project-management-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "project_management_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.15.19", features = ["toml"] }
git2 = "0.20.3"
tracing = { version = "0.1.44", features = ["valuable"] }
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"
thiserror = "2.0"
toml = "0.9.8"
derive_more = { version = "2.1.1", features = ["display"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-shell = "2.3.4"
java-properties = "2.0.0"
